--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "autoprefixer": "^9",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "vue": "^3.0.4"
+    "vue": "^3.0.4",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.9",
