--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "moduleResolution": "node",
     "strict": true,
     "noUnusedLocals": true,
+    "jsx": "preserve",
     "noUnusedParameters": true,
     "experimentalDecorators": true,
     "lib": ["dom", "esnext"]
